--- a/y/libp2p/muxers/mplex/mplex.html
+++ b/y/libp2p/muxers/mplex/mplex.html
@@ -244,7 +244,12 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">formatItIMPL
+      <ul class="simple nested-toc-section">close
+      <li><a class="reference" href="#close.t%2CMplex"
+    title="close(s: Mplex): untyped">close(s: Mplex): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">formatItIMPL
       <li><a class="reference" href="#formatItIMPL.t%2CMplex"
     title="formatItIMPL(it: Mplex): auto">formatItIMPL(it: Mplex): auto</a></li>
 
@@ -359,6 +364,18 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
+<div id="close.t,Mplex" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#close.t%2CMplex"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="lpchannel.html#Mplex"><span class="Identifier">Mplex</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/mplex/mplex.nim#L246"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L246" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="formatItIMPL.t,Mplex" class="tohide">
 <dt><pre><span class="Keyword">template</span> <a href="#formatItIMPL.t%2CMplex"><span class="Identifier">formatItIMPL</span></a><span class="Other">(</span><span class="Identifier">it</span><span class="Other">:</span> <a href="lpchannel.html#Mplex"><span class="Identifier">Mplex</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span></pre></dt>
 <dd>
@@ -386,7 +403,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 16:26:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-02 15:59:31 UTC</small>
       </div>
     </div>
   </div>
