--- a/y/libp2p/muxers/muxer.html
+++ b/y/libp2p/muxers/muxer.html
@@ -280,7 +280,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">close
       <li><a class="reference" href="#close.t%2CMuxer"
-    title="close(m: Muxer): untyped">close(m: Muxer): untyped</a></li>
+    title="close(s: Muxer): untyped">close(s: Muxer): untyped</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">formatItIMPL
@@ -504,7 +504,7 @@ class="link-seesrc" target="_blank">Source</a>
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
 <div id="close.t,Muxer" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#close.t%2CMuxer"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="muxer.html#Muxer"><span class="Identifier">Muxer</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dt><pre><span class="Keyword">template</span> <a href="#close.t%2CMuxer"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="muxer.html#Muxer"><span class="Identifier">Muxer</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
 <dd>
 
 
@@ -537,7 +537,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 16:26:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-02 15:59:30 UTC</small>
       </div>
     </div>
   </div>
