--- a/y/libp2p/protocols/secure/noise.html
+++ b/y/libp2p/protocols/secure/noise.html
@@ -279,9 +279,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="readMessage(sconn: NoiseConnection): Future[seq[byte]]">readMessage(sconn: NoiseConnection): Future[seq[byte]]</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">write
-      <li><a class="reference" href="#write.e%2CNoiseConnection%2Cseq%5Bbyte%5D"
-    title="write(sconn: NoiseConnection; message: seq[byte]): Future[void]">write(sconn: NoiseConnection; message: seq[byte]): Future[void]</a></li>
+  <ul class="simple nested-toc-section">writeX
+      <li><a class="reference" href="#writeX.e%2CNoiseConnection%2Cseq%5Bbyte%5D%2Ctuple%5Bstring%2Cint%2Cint%5D"
+    title="writeX(sconn: NoiseConnection; message: seq[byte];
+       info: tuple[filename: string, line: int, column: int]): Future[void]">writeX(sconn: NoiseConnection; message: seq[byte];
+       info: tuple[filename: string, line: int, column: int]): Future[void]</a></li>
 
   </ul>
 
@@ -293,6 +295,11 @@ window.addEventListener("DOMContentLoaded", main2);
       <ul class="simple nested-toc-section">formatItIMPL
       <li><a class="reference" href="#formatItIMPL.t%2CNoiseConnection"
     title="formatItIMPL(it: NoiseConnection): auto">formatItIMPL(it: NoiseConnection): auto</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">write
+      <li><a class="reference" href="#write.t%2CNoiseConnection%2Cseq%5Bbyte%5D"
+    title="write(s: NoiseConnection; msg: seq[byte]): untyped">write(s: NoiseConnection; msg: seq[byte]): untyped</a></li>
 
   </ul>
 
@@ -443,9 +450,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L606"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L611"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L606" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L611" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -473,9 +480,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L596"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L601"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L596" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L601" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -486,9 +493,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L509"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L514"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L509" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L514" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -498,9 +505,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L602"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L607"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L602" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L607" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -517,9 +524,10 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="write.e,NoiseConnection,seq[byte]" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#write.e%2CNoiseConnection%2Cseq%5Bbyte%5D"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">sconn</span><span class="Other">:</span> <a href="noise.html#NoiseConnection"><span class="Identifier">NoiseConnection</span></a><span class="Other">;</span> <span class="Identifier">message</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="writeX.e,NoiseConnection,seq[byte],tuple[string,int,int]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#writeX.e%2CNoiseConnection%2Cseq%5Bbyte%5D%2Ctuple%5Bstring%2Cint%2Cint%5D"><span class="Identifier">writeX</span></a><span class="Other">(</span><span class="Identifier">sconn</span><span class="Other">:</span> <a href="noise.html#NoiseConnection"><span class="Identifier">NoiseConnection</span></a><span class="Other">;</span> <span class="Identifier">message</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">;</span>
+              <span class="Identifier">info</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">line</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">,</span> <span class="Identifier">column</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <span class="Identifier">void</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -547,6 +555,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="write.t,NoiseConnection,seq[byte]" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#write.t%2CNoiseConnection%2Cseq%5Bbyte%5D"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="noise.html#NoiseConnection"><span class="Identifier">NoiseConnection</span></a><span class="Other">;</span> <span class="Identifier">msg</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/noise.nim#L511"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/noise.nim#L511" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 
@@ -557,7 +577,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 16:26:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-02 15:59:31 UTC</small>
       </div>
     </div>
   </div>
