--- a/y/libp2p/protocols/secure/secure.html
+++ b/y/libp2p/protocols/secure/secure.html
@@ -296,6 +296,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="formatItIMPL(it: SecureConn): auto">formatItIMPL(it: SecureConn): auto</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">readOnce
+      <li><a class="reference" href="#readOnce.t%2CSecureConn%2Cpointer%2Cint"
+    title="readOnce(s: SecureConn; pbytes: pointer; nbytes: int): untyped">readOnce(s: SecureConn; pbytes: pointer; nbytes: int): untyped</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -526,6 +531,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="readOnce.t,SecureConn,pointer,int" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#readOnce.t%2CSecureConn%2Cpointer%2Cint"><span class="Identifier">readOnce</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="secure.html#SecureConn"><span class="Identifier">SecureConn</span></a><span class="Other">;</span> <span class="Identifier">pbytes</span><span class="Other">:</span> <span class="Identifier">pointer</span><span class="Other">;</span> <span class="Identifier">nbytes</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/protocols/secure/secure.nim#L175"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/secure/secure.nim#L175" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 <div class="section" id="19">
@@ -541,7 +558,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 16:26:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-02 15:59:30 UTC</small>
       </div>
     </div>
   </div>
