--- a/y/libp2p/muxers/mplex/mplex.html
+++ b/y/libp2p/muxers/mplex/mplex.html
@@ -254,6 +254,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="formatItIMPL(it: Mplex): auto">formatItIMPL(it: Mplex): auto</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">handle
+      <li><a class="reference" href="#handle.t%2CMuxer_2"
+    title="handle(m: Muxer): untyped">handle(m: Muxer): untyped</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -341,9 +346,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/mplex/mplex.nim#L197"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/mplex/mplex.nim#L201"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L197" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L201" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -370,9 +375,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/mplex/mplex.nim#L246"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/mplex/mplex.nim#L249"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L246" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L249" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -388,12 +393,24 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="handle.t,Muxer_2" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#handle.t%2CMuxer_2"><span class="Identifier">handle</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/mplex/mplex.nim#L198"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L198" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../muxer.html#formatItIMPL.t,Muxer"><span class="Identifier">formatItIMPL</span></a>, <a href="../muxer.html#new,typedesc[MuxerProvider],MuxerConstructor,string"><span class="Identifier">new</span></a>, <a href="../muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a>, <a href="../muxer.html#closeX.e,Muxer,tuple[string,int,int]"><span class="Identifier">closeX</span></a>, <a href="../muxer.html#close.t,Muxer"><span class="Identifier">close</span></a>, <a href="../muxer.html#shortLog,Muxer"><span class="Identifier">shortLog</span></a>, <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a>, <a href="../muxer.html#MuxerConstructor"><span class="Identifier">MuxerConstructor</span></a>, <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a>, <a href="../muxer.html#newStream.e,Muxer,string,bool"><span class="Identifier">newStream</span></a>, <a href="../muxer.html#DefaultChanTimeout"><span class="Identifier">DefaultChanTimeout</span></a>, <a href="../muxer.html#MuxerHandler"><span class="Identifier">MuxerHandler</span></a>, <a href="../muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>, <a href="../muxer.html#TooManyChannels"><span class="Identifier">TooManyChannels</span></a>, <a href="../muxer.html#handle.e,Muxer"><span class="Identifier">handle</span></a>
+<a href="../muxer.html#formatItIMPL.t,Muxer"><span class="Identifier">formatItIMPL</span></a>, <a href="../muxer.html#handleX.e,Muxer,tuple[string,int,int]"><span class="Identifier">handleX</span></a>, <a href="../muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a>, <a href="../muxer.html#closeX.e,Muxer,tuple[string,int,int]"><span class="Identifier">closeX</span></a>, <a href="../muxer.html#close.t,Muxer"><span class="Identifier">close</span></a>, <a href="../muxer.html#shortLog,Muxer"><span class="Identifier">shortLog</span></a>, <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a>, <a href="../muxer.html#MuxerConstructor"><span class="Identifier">MuxerConstructor</span></a>, <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a>, <a href="../muxer.html#newStream.e,Muxer,string,bool"><span class="Identifier">newStream</span></a>, <a href="../muxer.html#DefaultChanTimeout"><span class="Identifier">DefaultChanTimeout</span></a>, <a href="../muxer.html#new,typedesc[MuxerProvider],MuxerConstructor,string"><span class="Identifier">new</span></a>, <a href="../muxer.html#MuxerHandler"><span class="Identifier">MuxerHandler</span></a>, <a href="../muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>, <a href="../muxer.html#TooManyChannels"><span class="Identifier">TooManyChannels</span></a>, <a href="../muxer.html#handle.t,Muxer"><span class="Identifier">handle</span></a>
 </dl></div>
 
   </div>
@@ -403,7 +420,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-02 15:59:31 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-03 13:44:03 UTC</small>
       </div>
     </div>
   </div>
